--- a/deploy/platform/docker/docker-compose.single-node.iotdb.yaml
+++ b/deploy/platform/docker/docker-compose.single-node.iotdb.yaml
@@ -24,7 +24,7 @@ services:
     ports:
       - "6667:6667"
     healthcheck:
-      test: [ "CMD-SHELL", "curl --silent --fail localhost:6667/_cluster/health" ]
+      test: ["CMD", "bash", "-c", "cat < /dev/null > /dev/tcp/127.0.0.1/6667"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -45,6 +45,7 @@ services:
       SW_OTEL_RECEIVER: default # @feature: vm; enable the OC receiver that receives the VM metrics
       SW_OTEL_RECEIVER_ENABLED_OC_RULES: vm # @feature: vm; enable the OC rules that analyse the VM metrics
       SW_STORAGE: iotdb
+      SW_STORAGE_IOTDB_HOST: iotdb
       SW_TELEMETRY: prometheus # @feature: so11y; expose the metrics of self o11y through prometheus
       SW_PROMETHEUS_FETCHER: default # @feature: so11y; fetch the metrics of self o11y through prometheus
       JAVA_OPTS: "-Xms2048m -Xmx2048m"
