--- a/.github/workflows/publish-images.yaml
+++ b/.github/workflows/publish-images.yaml
@@ -19,7 +19,7 @@ name: publish-images
 on:
   push:
     branches:
-      - main
+      - iotdb
 
 env:
   HUB: ghcr.io/LIU-WEI-git/skywalking-showcase
