--- a/Makefile.in
+++ b/Makefile.in
@@ -27,8 +27,8 @@ TAG ?= $(shell git rev-parse --short HEAD)
 ES_IMAGE ?= docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.0
 IOTDB_IMAGE ?= apache/iotdb:0.12.3-node
 
-SW_OAP_IMAGE ?= ghcr.io/apache/skywalking/oap:df75eb7d97d42ddbeced0f6480587a57ad007f89
-SW_ROCKET_BOT_IMAGE ?= ghcr.io/apache/skywalking/ui:df75eb7d97d42ddbeced0f6480587a57ad007f89
+SW_OAP_IMAGE ?= apache/skywalking-oap-server:8.9.0
+SW_ROCKET_BOT_IMAGE ?= apache/skywalking-ui:8.9.0
 SW_CLI_IMAGE ?= ghcr.io/apache/skywalking-cli/skywalking-cli:8c5725f2c4c47de6091748c1b4747f0d6047ad8e
 SW_EVENT_EXPORTER_IMAGE ?= ghcr.io/apache/skywalking-kubernetes-event-exporter/skywalking-kubernetes-event-exporter:8a012a3f968cb139f817189afb9b3748841bba22
 
